# goit-pythonweb-hw-10

./: .gitignore  Dockerfile  compose.db.yml  compose.yml  main.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 141bf7951f70_add_refresh_token_to_user.py  61f961ff5aa2_init.py  8e43aa2bcbb0_add_email_verification_flag_to_user.py  b12e60eafcd6_add_user_model.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  cloudinary.py  contacts.py  email.py  users.py
src/services/templates/: email-verification.html
